# modular-monolith-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  config.yaml  log_config.json  pyproject.toml  run.sh
src/: main.py
src/app/: MountedLifespanMiddleware.py  __init__.py  app_factory.py  config_schema.yaml  main.py  subapp.openapi.py
src/app/tests/: test_main.py
src/common/: config_loader.py  importer.py  utils.py
src/common/logging/: AsyncEmitLogHandler.py  __init__.py  getLogger.py  json_formatter.py
src/common/logging/middleware/: __init__.py  logger_context_middleware.py
src/common/logging/tests/: test_async_handler.py
src/common/routers/: status_OK.py
src/services/pet_service/: _app.py  consants.py  create_tables.py  database.py  defaults.py  main.py  models.py
src/services/pet_service/core/: __init__.py  service.py
src/services/pet_service/dependencies/: __init__.py  database.py  service.py
src/services/pet_service/routers/: __init__.py  pets.py
src/services/pet_service/tests/: test_crud.py  test_main.py
src/services/template_service/: main.py
src/services/template_service/core/: service.py
src/services/template_service/dependencies/: __init__.py  service.py
src/services/template_service/routers/: __init__.py  service.py
src/services/user_service/: _app.py  create_tables.py  database.py  defaults.py  main.py  models.py
src/services/user_service/core/: __init__.py  database.py  service.py
src/services/user_service/dependencies/: __init__.py  service.py  (+1 more)
tests/: __init__.py
tests/common/logging/: test_async_handler.py
(+5 files in other folders)
