[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx[all]>=0.28.1",
    "jsonschema>=4.23.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.25.0",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.distutils.bdist_wheel]
universal = true

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pyright>=1.1.390",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
exclude = [".venv","generated"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportUnusedVariable = true

[[tool.pyright.overrides]]  # disable strict type checking for tests
path = "tests/*"
reportMissingImports = false
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto" 
pythonpath = [
  ".","src","generated"
]
